continous developing backend through claude code

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,14 @@
 # Environment Configuration
 # Copy this file to .env and fill in the values
 
-# Database
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/research_db
+# MongoDB (Primary Database)
+MONGO_URL=mongodb://localhost:27017
+MONGO_DB_NAME=research_assistant
 
-# Redis (Celery & Caching)
+# Redis (Caching & Celery)
 REDIS_URL=redis://localhost:6379/0
 
-# Vector DB
+# Vector DB (Optional)
 VECTOR_DB_URL=http://localhost:6333
 VECTOR_DB_API_KEY=
 
