--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -5,26 +5,27 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
-    libpq-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install poetry
-RUN pip install poetry
+# Copy requirements first for better caching
+COPY requirements.txt requirements-dev.txt* ./
 
-# Copy dependencies
-COPY pyproject.toml poetry.lock* ./
-
-# Configure poetry to not use virtualenv inside docker
-RUN poetry config virtualenvs.create false
-
-# Install dependencies
-RUN poetry install --no-interaction --no-ansi --no-root
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
 
+# Create directory for qdrant storage
+RUN mkdir -p /app/qdrant_storage
+
 # Expose port
 EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD python -c "import requests; requests.get('http://localhost:8000/health')" || exit 1
 
 # Run command
 CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
